--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -20,8 +20,20 @@ header > h1{
     text-align: center;
 }
 
-menu{
+i#burguer{
+    background-color: rgb(73, 73, 73);
+    text-align: center;
     display: block;
+    padding: 10px;
+}
+
+i#burguer:hover{
+    background-color: white;
+    color: black
+}
+
+menu{
+    display: none;
 }
 
 menu > ul{
