--- a/desafios/desafio016/estilos/midia-query.css
+++ b/desafios/desafio016/estilos/midia-query.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) /* TABLET */{
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
-        width: 90vw;
+        width: 80vw;
+        height: 300px;
     }
     section#login > div#imagem {
         float: left;
@@ -18,12 +19,13 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) /* DESKTOP */{
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
-        width: 990px;
+        width: 950px;
+        height: 370px;
     }
     section#login > div#imagem {
         float: right;
@@ -35,7 +37,7 @@
         width: 50%;
     }
 
-    div#formulario > h1 {
+    div#formulario > h2 {
         font-size: 2em;
     }
 
