--- a/desafios/desafio016/estilos/style.css
+++ b/desafios/desafio016/estilos/style.css
@@ -17,6 +17,18 @@ body {
     background-image: linear-gradient(to top, #49a09d, #5f2c82);
 }
 
+main h1 {
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+}
+
+main h2 {
+    color: white;
+    text-align: center;
+    padding-top: 10px;
+}
+
 html, body {
     background-color: #5f2c82;
     height: 100vh;
@@ -33,16 +45,16 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
-    transition: width .4s, height .4s;
+    transform: translate(-50%, -50%);
+    transition: width .5s, height .5s;
     transition-timing-function: ease;
 }
 
@@ -58,37 +70,84 @@ section#login > div#formulario {
     padding: 10px;
 }
 
-div#formulario > h1 {
+div#formulario > h2 {
+    color: black;
     text-align: center;
+    padding-top: 5px;
     margin-bottom: 10px;
 }
 
 div#formulario > p {
     font-size: 0.8em;
+    margin: 12px 0px;
 }
 
-.campo {
+form > div.campo {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    background-color: var(--cor1);
     width: 100%;
+    height: 50px;
+    border-radius: 8px;
+    margin: 5px 0px 8px 0px;
+    padding: 5px;
 }
 
-.campo i {
+div.campo > label {
+    display: none;
+}
+
+div.campo > i {
+    color: white;
+    font-size: 2em;
     margin-right: 10px;
 }
 
-.campo input {
-    flex: 1;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: calc(100% - 30px); /* Ajusta a largura para evitar overflow */
+div.campo > input {
+    background-color: #54cdc9;
+    font-size: 1em;
+    width: calc(100%);
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    padding: 0 10px;
+    margin-left: 5px;
 }
 
-.campo label {
-    margin-left: 10px;
-    white-space: nowrap;
-    display: inline-block;
-    width: auto;
+div.campo > input:focus-within{
+    background-color: white;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    text-align: center;
+    width: 100%;
+    height: 40px;
+    background-color: var(--cor0);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 0.9em;
+    width: 100%;
+    height: 40px;
+    padding-top: 8px;
+    margin-top: 5px;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+form > a.botao:hover {
+    color: #37aba7;
 }
