--- a/exercicios/ex027/flex013-menu/style.css
+++ b/exercicios/ex027/flex013-menu/style.css
@@ -13,12 +13,12 @@
 }
 
 body {
-    background-image: linear-gradient(to top, var(--cor3), var(--cor1));
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    background-color: rgb(180, 180, 180);
-    height: 100vh;
-    width: 100vw;
+        background-image: linear-gradient(to top, var(--cor3), var(--cor2));
+        background-size: cover;
+        background-repeat: no-repeat;            
+        font-size: 1em;
+        height: 115vh;
 }
 
 header {
